[gd_scene load_steps=9 format=2]

[ext_resource path="res://Font/new_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/pressedoption.png" type="Texture" id=2]
[ext_resource path="res://UI/inventory.png" type="Texture" id=3]
[ext_resource path="res://UI/hoveroption.png" type="Texture" id=4]
[ext_resource path="res://UI/option.png" type="Texture" id=5]
[ext_resource path="res://UI/OptionMenu.gd" type="Script" id=6]
[ext_resource path="res://Font/pixellegacy.tres" type="DynamicFont" id=7]
[ext_resource path="res://Music&Sound/1.ogg" type="AudioStream" id=8]

[node name="OptionMenu" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 169.0
margin_bottom = 94.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 5.0
margin_right = 142.0
margin_bottom = 94.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
margin_left = -40.1554
margin_top = -20.1787
margin_right = 199.845
margin_bottom = 111.822
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 12.6307
margin_top = 18.9489
margin_right = 60.6307
margin_bottom = 30.9489
custom_fonts/font = ExtResource( 1 )
text = "Option"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="option" type="HBoxContainer" parent="."]
margin_left = 3.0
margin_top = 28.0
margin_right = 69.0
margin_bottom = 108.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="column" type="VBoxContainer" parent="option"]
margin_right = 57.0
margin_bottom = 80.0
alignment = 1

[node name="Music" type="CheckBox" parent="option/column"]
margin_right = 57.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 7 )
text = "Music"

[node name="Full Screen" type="CheckBox" parent="option/column"]
margin_top = 28.0
margin_right = 57.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 7 )
text = "Full Screen"

[node name="VFX" type="CheckBox" parent="option/column"]
margin_top = 56.0
margin_right = 57.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 7 )
text = "VFX"

[node name="OST" type="AudioStreamPlayer2D" parent="option/column"]
stream = ExtResource( 8 )

[node name="Back" type="TextureButton" parent="."]
margin_left = 39.1342
margin_top = 83.9822
margin_right = 94.1342
margin_bottom = 92.9822
rect_min_size = Vector2( 40, 5 )
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Back"]
anchor_left = -0.140085
anchor_top = 0.0119848
anchor_right = 0.205369
anchor_bottom = 0.678659
margin_left = -4.74454
margin_top = -1.01863
margin_right = 56.2555
margin_bottom = 12.9813
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.576471, 0.388235, 0.262745, 1 )
text = "Back"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}
[connection signal="toggled" from="option/column/Music" to="." method="_on_Music_toggled"]
[connection signal="toggled" from="option/column/Full Screen" to="." method="_on_Full_Screen_toggled"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
